--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,13 @@
             "email": "ken@edmondscommerce.co.uk"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "EdmondsCommerce\\Magento2StyleGuide\\": ""
+        }
+    }
 }
